feat: implement BatchProcessor with virtual threads and structured logging
- Implement concurrent directory ingestion using Virtual Threads
- Integrate SLF4J with MDC for context-aware logging (file name, size)